# Blockrendum

./: .gitignore  BUILD_GUIDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: seed-project.yml
docs/: github-project-board.md  github-project-issues.tsv
scripts/: seed_github_project.sh
src/blockrendum/: config.py  main.py
src/blockrendum/api/: health.py
src/middlewares/: logging.py
tests/: test_health.py
