[project]
name = "blockrendum"
version = "0.1.0"
requires-python = ">=3.12"
dependencies= [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "sqlalchemy",
    "psycopg[binary]",
    "alembic",
    "web3"
]

[dependency-groups]
dev = ["pytest", "httpx", "ruff"]

[tool.pytest.ini_options]
pythonpath = ["."]
